--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "type": "module",
   "private": "true",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Multipacker/rss-reader.git"
+  },
   "scripts": {
     "start": "node src/main.js",
-    "build": "ncc build src/index.js --minify --no-cache --license LICENSE --target es2023"
+    "build": "ncc build src/main.js --minify --no-cache --license LICENSE --target es2023"
   },
   "dependencies": {
-    "fast-xml-parser": "^5.3.0"
+    "fast-xml-parser": "^5.3.0",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.4"
